spade-tests/src/snapshots/spade_tests__parser__module_outside_doc_comment_hint.snap
---
source: spade-tests/src/parser.rs
---
/// This is my module :3
mod x {}


error: invalid attribute location
  ┌─ testinput:1:1
  │
1 │ /// This is my module :3
  │ ^^^^^^^^^^^^^^^^^^^^^^^^ attributes are not allowed here
2 │ mod x {}
  │ --- ...because this is a mod
  │
  = note: attributes are only allowed on structs, enums, their variants, functions and pipelines
  = help: If you want to document this module, use inside comments (//!) instead.
